# nnkl

./: .env.example  .gitignore  QUICKSTART.md  README.md  README2.md  TASK.md  docker-compose.yml
.run/: backend.run.xml  compound dev.run.xml  db.run.xml  lightrag.run.xml  pytest ocr.run.xml  run ocr.run.xml  test backend.run.xml
backend/: go.mod  go.sum  main.go
docs/: apiv1.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
lightrag/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  docker-entrypoint.sh  import-ocr-results.ps1  index.ps1  ingest-via-ocr.ps1  ocr_mapping.json  patch_postgres_table_names.py  prepare-input.ps1  query.ps1  requirements.txt  setup.ps1  start.ps1
ocr/: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ocr/app/: __init__.py  config.py  main.py
ocr/app/api/: routes.py  schemas.py
ocr/app/core/: __init__.py  path_security.py  pdf_validator.py
ocr/app/db/: models.py  session.py
ocr/app/services/: __init__.py  latex_exporter.py  ocr_service.py  pdf_quality.py  progress.py  queue_service.py  table_postprocessor.py
ocr/app/use_cases/: document_extractor.py  parse_document.py
ocr/app/workers/: __init__.py  celery_app.py
ocr/scripts/: preload_models.py
ocr/tests/: conftest.py  test_api.py  test_ocr_service.py  test_path_security.py  test_queue_service.py
(+151 files in other folders)
