[project]
name = "ocr-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "sqlalchemy==2.0.37",
    "psycopg[binary]==3.2.3",
    "structlog==24.4.0",
    "mineru[pipeline]==3.4.0",
    "PyMuPDF==1.25.2",
    "pikepdf==9.5.2",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "python-dotenv==1.0.1",
    "six==1.16.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]